# consair

./: BENCHMARKS.md  BENCHMARK_ANALYSIS.md  Cargo.toml  README.md  test_macro_examples.lisp  test_native_functions.lisp  test_vector_syntax.lisp
.github/: RELEASE.md
.github/workflows/: benchmark.yml  ci.yml  pages.yml  release.yml
.moth/: .current  config.yml
.moth/doing/: hqixc-high-crate_reorganization_core_cons_cadr_separation.md
.moth/done/: j1rrh-med-examine_aot_standalone_label_handling.md  nhn9k-med-core_persistant_datastructures.md  ploa1-high-jit_aot_stdlib_parity_with_interpreter.md
.moth/ready/: a3p6f-med-core_abstractions.md  f6bza-med-jit.md  ir5vo-med-debugger.md  latik-med-module_system.md  ly1pa-med-tab_completion.md  mc3cb-med-aot.md  oo4vy-high-aot_missing_features_for_interpreter_parity.md  ttr59-med-core_fast_datastructures.md  uj4g8-med-syntax_highlighting.md  yim8q-med-jit_module_refactor.md
cadr/: Cargo.toml
cadr/src/: lib.rs  main.rs
cadr/src/aot/: compiler.rs  runtime_ir.rs
cons/: Cargo.toml
cons/benches/: benchmarks.rs  environment_bench.rs
cons/src/: interpreter.rs  lib.rs  main.rs  native.rs  runtime.rs  stdlib.rs
cons/src/jit/: analysis.rs  cache.rs  engine.rs  error.rs  mod.rs
cons/tests/: abstractions_tests.rs  file_runner_tests.rs  integration_tests.rs  macro_tests.rs  native_tests.rs  numeric_tests.rs  persistent_tests.rs  stdlib_tests.rs  string_tests.rs  vector_tests.rs
consair-core/: Cargo.toml  README.md
consair-core/benches/: benchmarks.rs  environment_bench.rs
consair-core/src/: abstractions.rs  codegen.rs  interner.rs  interpreter.rs  jit.rs  language.rs  lexer.rs  lib.rs  native.rs  numeric.rs  parser.rs  runtime.rs  stdlib.rs
consair-core/src/aot/: compiler.rs  mod.rs  runtime_ir.rs
consair-core/src/jit/: analysis.rs  cache.rs  compiled.rs  engine.rs  mod.rs
consair-core/tests/: abstractions_tests.rs  integration_tests.rs  jit_tests.rs  numeric_tests.rs  proptest_numeric.rs  stdlib_tests.rs  string_tests.rs  thread_safety_test.rs  vector_tests.rs
core/: Cargo.toml
core/benches/: benchmarks.rs
core/src/: abstractions.rs  environment.rs  language.rs  lexer.rs  lib.rs  stdlib.rs
core/src/aot/: compiler.rs
core/src/jit/: cache.rs  engine.rs  error.rs
core/tests/: integration_tests.rs  jit_tests.rs  macro_tests.rs  native_tests.rs  numeric_tests.rs  persistent_tests.rs  proptest_numeric.rs
docs/: README.md  SETUP.md  _config.yml  index.html  index.md
docs/examples/: README.md
docs/internals/: architecture.md
docs/language/: README.md  special-forms.md  stdlib.md  types.md
docs/tools/: cadr.md  cons.md
examples/: README.md  advanced.lisp  basic.lisp  basics.lisp  closures.lisp  factorial.lisp  functions.lisp  jit-demo.lisp  list-ops.lisp  macros.lisp  simple.lisp  stdlib.lisp  thread_safety_demo.rs
proposals/: 01-fix-main-parser-bug.md  02-fix-numeric-overflow-bug.md  03-add-recursion-depth-limit.md  04-optimize-environment-performance.md  05-add-string-interning.md  06-split-parser-module.md  07-implement-tail-call-optimization.md  08-add-property-based-tests.md  09-add-benchmarks.md  10-COMPLETION-SUMMARY.md  10-improve-repl.md  11-document-security-implications.md  12-add-macro-system.md  13-add-module-system.md  14-add-debugger.md  15-add-recursive-function-support.md  16-add-repl-syntax-highlighting.md  17-add-repl-tab-completion.md  README.md
src/: interpreter.rs  lib.rs  main.rs
tests/: integration_tests.rs
