[package]
name = "cons"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Consair interpreter - Interactive REPL and file executor for Consair Lisp"
readme = "../README.md"
keywords = ["lisp", "interpreter", "repl"]
categories = ["command-line-utilities"]
repository = "https://github.com/tsmarsh/consair"

[features]
default = []
jit = ["consair-core/jit"]

[dependencies]
consair-core = { workspace = true }
rustyline = "14.0"
dirs = "5.0"

[dev-dependencies]
rand = "0.8"

[[bin]]
name = "cons"
path = "src/main.rs"
