[package]
name = "cons"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Consair runtime - Interpreter, JIT compiler, and REPL"
readme = "../README.md"
keywords = ["lisp", "interpreter", "jit", "repl"]
categories = ["command-line-utilities", "compilers"]
repository = "https://github.com/tsmarsh/consair"

[dependencies]
core = { workspace = true }
rustyline = "14.0"
dirs = "5.0"

# JIT compilation (requires LLVM 17.0)
inkwell = { version = "0.4", features = ["llvm17-0"] }

[dev-dependencies]
rand = "0.8"
num-bigint = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
codspeed-criterion-compat = "2.0"
cadr = { workspace = true }

[lib]
name = "cons"
path = "src/lib.rs"

[[bin]]
name = "cons"
path = "src/bin/main.rs"

[[bench]]
name = "environment_bench"
harness = false

[[bench]]
name = "benchmarks"
harness = false
