[package]
name = "consair-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Consair - Minimal Lisp based on McCarthy's 1960 paper"
readme = "../README.md"
keywords = ["lisp", "interpreter", "functional", "mccarthy"]
categories = ["compilers", "development-tools"]
repository = "https://github.com/tsmarsh/consair"

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
regex = "1.11"
unicode-segmentation = "1.12"
unicode-normalization = "0.1"

[lib]
name = "consair"
path = "src/lib.rs"
