[package]
name = "consair-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Consair - Minimal Lisp based on McCarthy's 1960 paper"
readme = "../README.md"
keywords = ["lisp", "interpreter", "functional", "mccarthy"]
categories = ["compilers", "development-tools"]
repository = "https://github.com/tsmarsh/consair"

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
once_cell = "1.20"
regex = "1.11"
string-interner = "0.17"
unicode-segmentation = "1.12"
unicode-normalization = "0.1"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
codspeed-criterion-compat = "2.0"

[lib]
name = "consair"
path = "src/lib.rs"

[[bench]]
name = "environment_bench"
harness = false

[[bench]]
name = "benchmarks"
harness = false
