[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core language definition for Consair - types, parser, and semantics"
readme = "../README.md"
keywords = ["lisp", "language", "types", "parser"]
categories = ["compilers", "development-tools"]
repository = "https://github.com/tsmarsh/consair"

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
once_cell = "1.20"
regex = "1.11"
rustc-hash = "2.1"
string-interner = "0.17"
unicode-segmentation = "1.12"

# Persistent data structures
im = "15"
unicode-normalization = "0.1"

# JIT compilation (requires LLVM 17.0) - will move to cons later
inkwell = { version = "0.4", features = ["llvm17-0"] }

[dev-dependencies]
proptest = "1.4"

[lib]
name = "consair"
path = "src/lib.rs"
